# my-gazebo-project

./: .gitignore  README.md  aruco_field.world  aruco_field.world.backup  cybertruck_new_textured.dae  start.sh  start_complete.sh
aruco_models/: model.config  model.sdf
my_clover_description/: CMakeLists.txt  package.xml
my_clover_description/launch/: aruco_world_with_drone.launch
my_clover_description/urdf/: clover4_standalone.urdf  clover4_with_camera.urdf
